--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "yiisoft/yii2": "*",
-        "simple-yii2/storage": "*",
+        "dkhlystov/yii2-storage": "*",
         "dkhlystov/yii2-uploadimage": "*"
     },
     "autoload": {
