--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "require": {
         "yiisoft/yii2": "*",
         "dkhlystov/yii2-storage": "*",
-        "dkhlystov/yii2-uploadimage": "*"
+        "dkhlystov/yii2-uploadimage": "*",
+        "simple-yii2/cms": "1.0.*"
     },
     "autoload": {
         "psr-4": {
