--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "yiisoft/yii2": "*",
         "dkhlystov/yii2-storage": "*",
         "dkhlystov/yii2-uploadimage": "*",
-        "simple-yii2/cms": "1.0.*"
+        "simple-yii2/cms": ">=1.0.0"
     },
     "autoload": {
         "psr-4": {
